# kbd-signal

./: LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/devices/: keychron-q1-he-8k.ja.md  keychron-q1-he-8k.md
examples/: claude-hooks.json  codex-hooks.json  config.q1-he-8k.json
kbd_signal/: __init__.py  _platform.py  cli.py  config.py  hooks.py  states.py  via.py
tests/: test_examples.py  test_hooks.py  test_platform.py  test_states.py  test_via.py
