[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kbd-signal"
version = "0.1.0"
description = "Claude Code / Codex status notifications via Keychron K8 Pro backlight (VIA raw HID, stock firmware)"
requires-python = ">=3.11"
dependencies = ["hidapi>=0.14"]
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "sora (Sora-bluesky)" }]

[project.urls]
Repository = "https://github.com/Sora-bluesky/kbd-signal"

[project.scripts]
kbd-signal = "kbd_signal.cli:main"

[tool.setuptools]
packages = ["kbd_signal"]
